--- a/public/index.html
+++ b/public/index.html
@@ -98,7 +98,7 @@
         <div class="project-members-container">
         <h5 class="anchored">Project Members</h5>
             <div class="project-member">
-          <p class="name">Professor Richard Roberts</p>
+          <p class="name">Richard Roberts</p>
           <p class="designation">Professor of History, Emeritus</p>
           
         </div>
